--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam soluta libero officia nihil ipsa repudiandae pariatur nulla. Tempore necessitatibus officiis quisquam illo, nobis, maxime illum, consectetur suscipit excepturi magni labore!</p>
 
 </div>
+<div>
+    <h3>Jpaness girl</h3>
+    <img src="girl pic.jpeg" alt="">
+</div>
     
 </body>
 </html>
